--- a/test/webapp/view/View2.view.xml
+++ b/test/webapp/view/View2.view.xml
@@ -3,7 +3,7 @@
 		<App id="app">
 			<pages>
 				<Page id="page" title="{i18n>title}">
-					<content><Button text="test"/></content>
+					<content></content>
 				</Page>
 			</pages>
 		</App>
