--- a/test/webapp/view/View1.view.xml
+++ b/test/webapp/view/View1.view.xml
@@ -3,7 +3,7 @@
 		<App id="app">
 			<pages>
 				<Page id="page" title="{i18n>title}">  
-					<content></content>   
+					<content><Button text="1123"></Button></content>   
 				</Page>
 			</pages>
 		</App>
